[project]
name = "maihongxu-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "maihongxu",email = "mhxu@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "maihongxu"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
